objects/BP_Application__c.object
<CustomObject><fields>
<fields>
        <fullName>OnlineApplicationLanguage__c</fullName>
        <formula>Contact__r.OnlineApplicationLanguage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Application Language</label>
        <type>Text</type>
    </fields><fields>
        <fullName>OverallHealthCondition__c</fullName>
        <description>What is your current overall health condition?</description>
        <inlineHelpText>What is your current overall health condition?</inlineHelpText>
        <label>Overall Health Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>P1Completed__c</fullName>
        <label>Application Submitted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>P2Completed__c</fullName>
        <label>P2 Completed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Paralysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paralysis</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PastorsEmail__c</fullName>
        <label>Pastor's Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>PastorsName__c</fullName>
        <label>Pastor's Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PersonalAppearance__c</fullName>
        <label>Personal Appearance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Pertussis__c</fullName>
        <label>Pertussis</label>
        <type>Date</type>
    </fields><fields>
        <fullName>PleaseListYourEducationExperience__c</fullName>
        <description>Please list your educational background.</description>
        <inlineHelpText>Please list your educational background.</inlineHelpText>
        <label>Please List Your Education Experience</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PleaseListYourWorkExperience__c</fullName>
        <description>Please list your work experience.</description>
        <inlineHelpText>Please list your work experience.</inlineHelpText>
        <label>Please List Your Work Experience</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Polio__c</fullName>
        <label>Polio</label>
        <type>Date</type>
    </fields><fields>
        <fullName>PositiveAttitude__c</fullName>
        <label>Positive Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PresentRelationshipWithGod__c</fullName>
        <description>What is your relationship with God like at the moment?</description>
        <inlineHelpText>What is your relationship with God like at the moment?</inlineHelpText>
        <label>Present Relationship with God</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PreviousMissionsExperiencesTraining__c</fullName>
        <description>Have you had any previous mission experiences or training? This includes any YWAM Training or YWAM Ministry you've done.</description>
        <inlineHelpText>Have you had any previous mission experiences or training? This includes any YWAM Training or YWAM Ministry you've done.</inlineHelpText>
        <label>Previous Missions Experiences/Training</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PurposeForJoiningAsAStaff__c</fullName>
        <description>What are your purposes for joining us as staff? (i.e your expectations, motivations, and outcomes you're looking for?)</description>
        <inlineHelpText>What are your purposes for joining us as staff? (i.e your expectations, motivations, and outcomes you're looking for?)</inlineHelpText>
        <label>Purpose for joining as a staff</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PurposeForJoiningTheProgram__c</fullName>
        <description>What are your purposes for joining this program? (i.e your expectations, motivations, and outcomes you're looking for?)</description>
        <inlineHelpText>What are your purposes for joining this program? (i.e your expectations, motivations, and outcomes you're looking for?)</inlineHelpText>
        <label>Purpose for Joining the Program</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PurposesForMissionBuilder__c</fullName>
        <description>What are your purposes for joining us as a Mission Builder? (i.e your expectations, motivations, and outcomes you're looking for?)</description>
        <inlineHelpText>What are your purposes for joining us as a Mission Builder? (i.e your expectations, motivations, and outcomes you're looking for?)</inlineHelpText>
        <label>Purposes for joining Mission Builder</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>RecurrentDiarrhea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrent Diarrhea</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RecurrentHeadache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrent Headache</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RefereeLeaderContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Leader (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Referee Leader (Contact))</relationshipLabel>
        <relationshipName>ApplicantLeader</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>RefereeTeacherEmployeeContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Teacher/Employee (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Referee Teacher/Employee (Contact))</relationshipLabel>
        <relationshipName>ApplicantTeacher</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>RelationToApplicant1__c</fullName>
        <description>Relation to Applicant (Pastor / Spiritual Leader / YWAM Leader)</description>
        <label>Relation to Applicant (SL)</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RelationToApplicant2__c</fullName>
        <description>Relation to Applicant (Teacher / Employer / Friend)</description>
        <label>Relation To Applicant (TE)</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RelationToApplicant3__c</fullName>
        <inlineHelpText>Relation To Applicant</inlineHelpText>
        <label>Relation To Applicant3</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ReleaseFromLiability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release From Liability</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Reliability__c</fullName>
        <label>Reliability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ResponsetoAuthorityFigures__c</fullName>
        <label>Response to Authority Figures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ResponsetoPressuresStress__c</fullName>
        <label>Response to Pressures/Stress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Rubella__c</fullName>
        <label>Rubella</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SeekingGodToDevelop__c</fullName>
        <description>What areas of your character are you personally seeking God to further develop and/or improve?</description>
        <inlineHelpText>What areas of your character are you personally seeking God to further develop and/or improve?</inlineHelpText>
        <label>Seeking God to develop</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SeekingHelpandSupporttoOvercome__c</fullName>
        <description>What areas of your character are you personally seeking God to further develop and/or improve?</description>
        <inlineHelpText>What areas of your character are you personally seeking God to further develop and/or improve?</inlineHelpText>
        <label>Areas Where You Need To Grow And Develop</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ServantHeart__c</fullName>
        <label>Servant Heart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ShortnessOfBreath__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shortness Of Breath</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SkinConditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skin Conditions</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SleepingDisorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleeping Disorder</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Ready to submit</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>StrugglesAndChallenges__c</fullName>
        <description>What are some struggles and challenges you are dealing with or have dealt with in the past?</description>
        <inlineHelpText>What are some struggles and challenges you are dealing with or have dealt with in the past?</inlineHelpText>
        <label>Struggles and Challenges</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TOEFLScore__c</fullName>
        <description>Test of English as a Foreign Language (TOEFL) Score</description>
        <inlineHelpText>Test of English as a Foreign Language (TOEFL) Score</inlineHelpText>
        <label>TOEFL/TOEIC Score</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TalentsSkillsAndStrengths__c</fullName>
        <description>Please share with us about your talents, skills and strengths(music, computers, sports, hospitality, administration, relational skills, etc.)</description>
        <inlineHelpText>Please share with us about your talents, skills and strengths(music, computers, sports, hospitality, administration, relational skills, etc.)</inlineHelpText>
        <label>Talents,Skills and Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TeachableSpirit__c</fullName>
        <label>Teachable Spirit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TeacherEmpRefCompletedDate__c</fullName>
        <label>Teacher/Emp. Ref. Completed Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>TeacherEmpRefStatus__c</fullName>
        <label>Teacher/Emp. Ref. Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TeacherEmpReferenceLanguage__c</fullName>
        <label>Teacher/Emp. Reference Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TeacherEmployerRefEmail__c</fullName>
        <label>Teacher/Employer Ref. Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>TeacherEmployerRefFirstName__c</fullName>
        <label>Teacher/Employer Ref. First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TeacherEmployerRefLastName__c</fullName>
        <label>Teacher/Employer Ref. Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Tetanus__c</fullName>
        <label>Tetanus</label>
        <type>Date</type>
    </fields><fields>
        <fullName>TextTest__c</fullName>
        <inlineHelpText>This is help text</inlineHelpText>
        <label>Text Test</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TumorOrCancer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tumor or Cancer</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ulcers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ulcers</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>UnderDoctorsCare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Doctors Care</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>UnderstandingOfSpokenEnglish__c</fullName>
        <description>How well can you understand spoken English</description>
        <inlineHelpText>How well can you understand spoken English</inlineHelpText>
        <label>Understanding of Spoken English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>UnderstandingWrittenEnglish__c</fullName>
        <description>How well can you understand written English?</description>
        <inlineHelpText>How well can you understand written English?</inlineHelpText>
        <label>Understanding Written English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>WeightKG__c</fullName>
        <label>Weight (kg)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>WhatMinistriesInterestYouTheMost__c</fullName>
        <description>What areas of ministry interest you the most? 
(i.e. teaching, children’s ministry, kitchen, administration, mercy ministry, urban ministry, design, performing arts, communications, music, hospitality, worship, evangelism, counseling, etc.)</description>
        <inlineHelpText>What areas of ministry interest you the most? 
(i.e. teaching, children’s ministry, kitchen, administration, mercy ministry, urban ministry, design, performing arts, communications, music, hospitality, worship, evangelism, counseling, etc.)</inlineHelpText>
        <label>What ministries interest you the most</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>WillingnessToBeAccountable__c</fullName>
        <label>Willingness to be Accountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>YellowFever__c</fullName>
        <label>Yellow Fever</label>
        <type>Date</type>
    </fields><fields>
        <fullName>YourRelationshipWithYourFamily__c</fullName>
        <description>Please share some insight into your relationship with your family.  Are they supportive of you attending this school?</description>
        <inlineHelpText>Please share some insight into your relationship with your family.  Are they supportive of you attending this school?</inlineHelpText>
        <label>Relationship with your family</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Application</label><nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Applications</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes><recordTypes>
        <fullName>DTS1Questions</fullName>
        <active>true</active>
        <label>DTS - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>DTS2Experience</fullName>
        <active>true</active>
        <label>DTS - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>DTS3Health</fullName>
        <active>true</active>
        <label>DTS - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>DTS4Agreements</fullName>
        <active>true</active>
        <label>DTS - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>DTS5References</fullName>
        <active>true</active>
        <label>DTS - 5. References</label>
    </recordTypes><recordTypes>
        <fullName>ELM1Questions</fullName>
        <active>true</active>
        <label>ELM - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>ELM2Experience</fullName>
        <active>true</active>
        <label>ELM - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>ELM3Health</fullName>
        <active>true</active>
        <label>ELM - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>ELM4Agreements</fullName>
        <active>true</active>
        <label>ELM - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>ELM5References</fullName>
        <active>true</active>
        <label>ELM - 5. References</label>
    </recordTypes><recordTypes>
        <fullName>MB1Questions</fullName>
        <active>true</active>
        <label>MB - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>MB2Experience</fullName>
        <active>true</active>
        <label>MB - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>MB3Health</fullName>
        <active>true</active>
        <label>MB - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>MB4Agreements</fullName>
        <active>true</active>
        <label>MB - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>MB5References</fullName>
        <active>true</active>
        <label>MB - 5. References</label>
    </recordTypes><recordTypes>
        <fullName>OutSem1Questions</fullName>
        <active>true</active>
        <label>Out/Sem - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>OutSem2Experience</fullName>
        <active>true</active>
        <label>Out/Sem - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>OutSem3Health</fullName>
        <active>true</active>
        <label>Out/Sem - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>OutSem4Agreements</fullName>
        <active>true</active>
        <label>Out/Sem - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>OutSem5References</fullName>
        <active>true</active>
        <label>Out/Sem - 5. References</label>
    </recordTypes><recordTypes>
        <fullName>Second1Questions</fullName>
        <active>true</active>
        <label>Second - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>Second2Experience</fullName>
        <active>true</active>
        <label>Second - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>Second3Health</fullName>
        <active>true</active>
        <label>Second - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>Second4Agreements</fullName>
        <active>true</active>
        <label>Second - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>Second5References</fullName>
        <active>true</active>
        <label>Second - 5. References</label>
    </recordTypes><recordTypes>
        <fullName>StaffMLD1Questions</fullName>
        <active>true</active>
        <label>Staff/MLD - 1. Questions</label>
    </recordTypes><recordTypes>
        <fullName>StaffMLD2Experience</fullName>
        <active>true</active>
        <label>Staff/MLD - 2. Experience</label>
    </recordTypes><recordTypes>
        <fullName>StaffMLD3Health</fullName>
        <active>true</active>
        <label>Staff/MLD - 3. Health</label>
    </recordTypes><recordTypes>
        <fullName>StaffMLD4Agreements</fullName>
        <active>true</active>
        <label>Staff/MLD - 4. Agreements</label>
    </recordTypes><recordTypes>
        <fullName>StaffMLD5References</fullName>
        <active>true</active>
        <label>Staff/MLD - 5. References</label>
    </recordTypes></CustomObject>